--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
-django==3.0
+asgiref==3.7.2
+certifi==2023.7.22
+coverage==7.3.1
+Django==3.0
+django-environ==0.11.2
+entrypoints==0.3
 flake8==3.7.0
+iniconfig==2.0.0
+mccabe==0.6.1
+packaging==23.1
+pluggy==1.3.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytest==7.4.2
+pytest-cov==4.1.0
 pytest-django==3.9.0
+pytz==2023.3.post1
+sentry-sdk==1.31.0
+six==1.16.0
+sqlparse==0.4.4
+urllib3==2.0.5
