--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,12 +31,11 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag your_username/lettings:${{ github.sha }} \
+        docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} \
         --build-arg SENTRY_URL=${{ secrets.SENTRY_URL }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}
-        
     - name: Push Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
