--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }}
+      run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}
     - name: Push Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
