--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,6 +32,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Debug
+      run: echo "docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}"
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}
     - name: Push Docker image
