--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Debug
       run: echo "docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}"
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg "SECRET_KEY=${{ secrets.SECRET_KEY }}" \
-       --build-arg "SENTRY_URL=${{ secrets.SENTRY_URL }}"
+      run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg "SECRET_KEY=${{ secrets.SECRET_KEY }}" --build-arg "SENTRY_URL=${{ secrets.SENTRY_URL }}"
     - name: Push Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
