--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,7 @@ jobs:
         run: pytest
 
   containerize:
+    needs: build-and-test
     runs-on: ubuntu-latest
     env:
       SENTRY_URL: ${{ secrets.SENTRY_URL }}
@@ -32,8 +33,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Debug
-      run: echo "docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }}"
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg "SECRET_KEY=${{ secrets.SECRET_KEY }}" --build-arg "SENTRY_URL=${{ secrets.SENTRY_URL }}"
     - name: Push Docker image
