Added the auto deploy

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,8 +51,7 @@ jobs:
 
     - name: Deploy to Render
       run: |
-        curl -H "Authorization: Bearer ${RENDER_API_KEY}" \
-             -H "Content-Type: application/json" \
-             -X POST \
-             -d '{"webhook": "'${DEPLOY_HOOK}'", "imgURL": "docker.io/meez25/lettings@${{ github.sha }}"}' \
-             https://api.render.com/webhooks
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"imgURL": "docker.io/meez25/lettings@'${{ github.sha }}'"}' \
+               https://api.render.com/deploy/srv-ckaof8sldnhc73ejjldg?key=${{ secrets.RENDER_API_KEY }}
