re-add of the api key

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,6 +57,7 @@ jobs:
     - name: Deploy to Render
       run: |
           curl -H "Content-Type: application/json" \
+               -H "Authorization: Bearer ${RENDER_API_KEY}" \
                -X POST \
                -d '{"imgURL": "docker.io/meez25/lettings:${{ github.sha }}"}' \
                https://api.render.com/deploy/srv-ckaof8sldnhc73ejjldg?key=${{ secrets.RENDER_API_KEY }}
