--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,7 @@ jobs:
         run: pytest
 
   containerize:
+    if: github.ref == 'refs/heads/master'
     needs: build-and-test
     runs-on: ubuntu-latest
     env:
@@ -32,7 +33,7 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg "SECRET_KEY=${{ secrets.SECRET_KEY }}" --build-arg "SENTRY_URL=${{ secrets.SENTRY_URL }}"
     - name: Push Docker image
@@ -41,6 +42,7 @@ jobs:
         docker push meez25/lettings:${{ github.sha }}
 
   deploy:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: [build-and-test, containerize]
     env:
