--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
-addopts = --nomigrations --cov=. --cov-report=html
+addopts = --nomigrations --cov=. --cov-report=html --cov-config=.coveragerc
 
