--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Collect Static Files
+        run: python manage.py collectstatic --noinput
+
       - name: Run Lint
         run: flake8 .
 
