added echo to start the container locally

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,10 +43,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag meez25/lettings:${{ github.sha }} --build-arg "SECRET_KEY=${{ secrets.SECRET_KEY }}" --build-arg "SENTRY_URL=${{ secrets.SENTRY_URL }}"
+
     - name: Push Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
         docker push meez25/lettings:${{ github.sha }}
+
+    - name: Run locally with this command
+      run: |
+        echo "To run locally, execute: docker pull meez25/lettings:$git_commit_hash && docker run -p 8000:8000 meez25/lettings:$git_commit_hash"
+    
 
   deploy:
     if: github.ref == 'refs/heads/master'
